--- a/wireframe_files/wireframe.html
+++ b/wireframe_files/wireframe.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./wireframe_files/9_27.css">
+    <link rel="stylesheet" href="9_27.css">
 </head>
 <body>
     <div class="container">
